crystfeldir = $(docdir)/scripts
crystfel_DATA = check-near-bragg double-hit random-image stream-split \
                wibbletron zone-axis create-mtz frequency i0-analysis mtz2hkl \
                sequence-image test-facetron zone-axes alternate-stream README \
                indexing-rate observed-peak-rate
EXTRA_DIST = check-near-bragg double-hit random-image stream-split \
             wibbletron zone-axis create-mtz frequency i0-analysis mtz2hkl \
             sequence-image test-facetron zone-axes alternate-stream README \
             indexing-rate observed-peak-rate
